2022-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jxl.c: Added some debug logging instrumentation so we can
        see the information the JXL reader is provided by libjxl.

        * configure.ac: JXL is working well enough to enable it by
        default.

2022-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jxl.c (WriteJXLImage): Call JxlEncoderCloseInput() so
        that encoder output is not corrupt.  JXL passes testsuite tests
        now!

        * magick/command.c (CompareImageCommand): Add -auto-orient support
        to 'compare'.  This tries to assure that the two images are right
        side up before comparing.

2022-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jxl.c (WriteJXLImage): Work to update JXL writer code to
        compile clean with libjxl v0.7.0.  Still not working!

2022-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/heif.c (ReadHEIFImage): Pass decode options to
        heif_decode_image().  Include rough implementation of progress
        monitor support but leave it disabled since libheif does not
        currently invoke the callbacks.

        * coders/jpeg.c (ReadJPEGImage): Store embedded profiles in image,
        even if in 'ping' mode.  This addresses a problem discovered when
        interfacing with minimagick (Debian bug #1006374 "graphicsmagick
        breaks ruby-mini-magick").

        * coders/url.c (ReadURLImage): Deal with libxml2 not offering HTTP
        or FTP capabilities.  It seems that support for FTP has now been
        removed by default.

2022-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * README.txt: Recomend using JasPer 3.0.0 (or later).

        * VisualMagick/magick/magick_config.h.in: Disable building with
        bundled JasPer sources by default since the bundled sources are
        archaic.

        * coders/jp2.c: Fix compilation with JasPer 3.0.0 (which is now