@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220319"
-#define public MagickPackageReleaseDate "snapshot-20220319"
+#define public MagickPackageVersionAddendum ".020220320"
+#define public MagickPackageReleaseDate "snapshot-20220320"
