@@ -1,3 +1,7 @@
+2022-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * Magick++/lib/Magick++/Include.h: Support 'ReadResource'.
+
 2022-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/jxl.c: Added some debug logging instrumentation so we can
